[package]
name = "tinyjson"
version = "0.0.2"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = "Tiny simple JSON parser/generator"
license = "MIT"
repository = "https://github.com/rhysd/tinyjson.git"
keywords = ["json"]

include = [
  "Cargo.toml",
  "README.md",
  "LICENSE.txt",
  ".gitignore",
  "src/*.rs",
  "tests/*.rs"
]

[dependencies]
