[package]
name = "tinyjson-bench"
publish = false
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
tinyjson = { path = ".." }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "generate"
harness = false
